# pyCrossfade

./: .gitignore  Dockerfile  LICENSE  README.md  docker.README.md  music-extractor--horovel.json  music-extractor--hypnotic.json  pyproject.toml  requirements.freeze.txt  requirements.txt  results.json  setup.py
.devcontainer/: Dockerfile
.github/workflows/: docker-build-publish.yaml
.github/workloads/: docker-build-publish.yaml
docs/: installation.md  scripted-usage-deprecated.md
pycrossfade/: __init__.py  cli.py  cliconfig.py  config.py  song.py  transition.py  utils.py
