[tool.poetry]
name = "pycrossfade"
version = "0.1.0"
description = "A CLI tool for creating crossfade transitions between music files"
authors = ["Oguzhan Yilmaz <oguzhanylmz271@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Cython = "^3.0.3"
numpy = "^1.22.0"
pyrubberband = "^0.3.0"
essentia = "2.1b6.dev0"
yodel = "^0.3.0"
madmom = "^0.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
